--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <head><title> Coming soon....</title>
 </head>
 <body><h1>Halooo World !!!<h1>
+  <h2> Insta <href =https://www.instagram.com/r_y_d_e_r__7/><h2>
 </body>
 <html>
