--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2>Karthik Raghuram</h2>
             <p>Chennai,India.</p>
             <a href="https://twitter.com/ryderisfree"><i class="fab fa-twitter"></i></a>
-            <a href="www.linkedin.com/in/karthikraghu"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/karthikraghu/"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/karthikraghu"><i class="fab fa-github"></i></a>
         </div>
         <div class="section-2">
