--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2>About</h2>
             <p>Highly Charismatic and Focus driven Technologist..<br>
             Loves to Code and Cook</p>
-            <h2> Good at </h2>
+            <h2> Tech Stack </h2>
             <p><i class="fab fa-python"></i>  <i class="fab fa-html5"></i>  <i class="fab fa-react"></i>  <i class="fab fa-js"></i></p>
             
 
