--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             Loves to Code and Cook</p>
             <h2> Tech Stack </h2>
             <p><i class="fab fa-python"></i>  <i class="fab fa-html5"></i>  <i class="fab fa-react"></i>  <i class="fab fa-js"></i></p>
-            
+            <h2> Some Cool Stuff</h2>
 
 
 
